--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,98 +1,151 @@
-* {
-  -webkit-font-smoothing: antialiased;
-}
-
-.footer-clean {
-  padding: 50px 0;
-  background-color: #fff;
-  color: #ccc;
+footer {
+  position: absolute;
   max-width: 95%;
   width: 50rem;
+  box-sizing: border-box;
+  border: 2px solid white;
+  padding: 5px;
+  border-radius: 12px;
+  background-color: #333;
   margin-left: auto;
   margin-right: auto;
-  border-radius: 12px;
+  left: 0;
+  right: 0;
+  top: 105%;
 }
 
-.footer-clean .col-sm h3 {
+footer a {
+  color: #bbb;
+}
+
+footer > h2 {
   justify-content: center;
-  text-align: center;
-}
-
-.footer-clean h3 {
-  margin-bottom: 12px;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.footer-clean ul {
-  padding: 0;
-  list-style: none;
-  line-height: 1.6;
-  font-size: 14px;
-  margin-bottom: 0;
-}
-
-.footer-clean ul a {
-  color: inherit;
-  text-decoration: none;
-  opacity: 0.8;
-}
-
-.footer-clean ul a:hover {
-  opacity: 1;
-}
-
-.footer-clean .item .social {
   text-align: right;
 }
-
-.footer-clean .copyright .row {
-  justify-content: right;
-}
-
-@media (max-width: 580px) {
-  .footer-clean .item {
-    text-align: center;
-    padding-bottom: 20px;
-    color: #333;
-    background-color: #ccc;
-  }
-}
-
-.footer-clean .item.social > a {
-  font-size: 24px;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  display: inline-block;
+footer .links {
+  float: right;
+  width: 40%;
+  font-size: 0.95em;
+  color: white;
   text-align: center;
-  border-radius: 1000%;
-  border: 1px solid #ccc;
-  margin-left: 10px;
-  margin-top: 22px;
-  color: inherit;
-  opacity: 0.75;
-}
-
-.footer-clean .item.social > a:hover {
-  opacity: 0.9;
-}
-
-@media (max-width: 991px) {
-  .footer-clean .item.social > a {
-    margin-top: 40px;
-  }
-}
-
-@media (max-width: 767px) {
-  .footer-clean .item.social > a {
-    margin-top: 10px;
-  }
-}
-
-.footer-clean .copyright {
-  margin-top: 14px;
+  text-decoration: none;
+  padding-bottom: 0;
   margin-bottom: 0;
-  font-size: 13px;
-  opacity: 0.6;
+}
+footer .column {
+  float: left;
+  width: 33.33%;
+}
+#c {
+  float: left;
+  width: 50%;
+  position: absolute;
+}
+.row {
+  padding-right: 25px;
+  padding-left: 25px;
+}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+footer .links ul li {
+  list-style: none;
+}
+footer .links ul li a {
+  color: #6f6f6f;
+  line-height: 1.9em;
+}
+/* 
+@media screen and (max-width: 1599px) {
+  footer .top .links {
+    width: 45%;
+  }
+  footer .top .about {
+    width: 55%;
+  }
+  footer .top .about .icons > div span {
+    min-width: auto;
+  }
+}
+@media screen and (max-width: 1365px) {
+  footer .top .links {
+    width: 50%;
+  }
+  footer .top .about {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 992px) {
+  footer .logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  footer .top .links {
+    width: 100%;
+    margin: 10px 0;
+  }
+  footer .top .about {
+    width: 100%;
+    margin: 10px 0;
+  }
+} */
+
+@media screen and (max-width: 580px) {
+  footer {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 95%;
+    top: 110%;
+  }
+  footer .links {
+    float: right;
+    width: 50%;
+    font-size: 0.95em;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+  footer .column {
+    float: left;
+    width: 30%;
+  }
+  footer h2 {
+    justify-content: center;
+    text-align: right;
+  }
+  footer .links ul li {
+    list-style: none;
+    padding-left: 0;
+  }
+  #c {
+    float: left;
+    width: 45%;
+    position: absolute;
+    height: 50%;
+  }
+  h3 {
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+  .row {
+    padding-right: 0;
+  }
+  ul {
+    border: None;
+    border-radius: None;
+    box-shadow: None;
+    overflow: visible;
+    padding: 0;
+    margin-left: 0;
+  }
+  p {
+    padding: 0;
+    margin: 0;
+  }
 }
