More changes to the UI

--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -18,7 +18,6 @@
       box-sizing: border-box;
       color: #FFFFFF;
       cursor: pointer;
-      display: inline-block;
       font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-size: 14px;
       font-weight: 500;
@@ -36,6 +35,7 @@
       user-select: none;
       -webkit-user-select: none;
       touch-action: manipulation;
+      float: right;
     }
     
 .button-1:hover, .button-1:focus {
